# httpServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: AIRESTAPI.json  Config.json  Config_Tests.json
src/: CMakeLists.txt  main.cpp
src/AI_Image_Processing_Unit/: CMakeLists.txt  CycleganAPI.cpp  CycleganAPI.h
src/AI_Image_Processing_Unit2/: CMakeLists.txt  HighResolution.cpp  HighResolution.h
src/AI_Image_Processing_Unit2/ai_models/OpenVINO_IR/FP16/: super_resolution.xml
src/AI_Image_Processing_Unit2/ai_models/OpenVINO_IR/FP32/: super_resolution.mapping  super_resolution.xml
src/AI_Image_Processing_Unit2/common/format_reader/: CMakeLists.txt
src/AI_Image_Processing_Unit2/common/utils/: CMakeLists.txt
src/AI_Image_Processing_Unit2/deployment_tools/ngraph/cmake/: ngraphTargets.cmake
src/AI_Image_Processing_Unit2/deployment_tools/opencv/: build_params.txt
src/HandleImageProcessing/: CMakeLists.txt  HandleImageProcessing.cpp  HandleImageProcessing.h
src/HandleUserLogin/: CMakeLists.txt  UserLogin.cpp  UserLogin.h
src/RedisCache/: CMakeLists.txt  RedisCache.cpp  RedisCache.h  RedisPublish.cpp  RedisPublish.h  RedisSubscribe.cpp  RedisSubscribe.h
src/http_server/: CMakeLists.txt  HttpServer.cpp  HttpServer.h  PagesRequestHandler.cpp  PagesRequestHandler.h  RequestHandlerFactory.cpp  RequestHandlerFactory.h  WebSocketReqHandler.cpp  WebSocketReqHandler.h
src/logger/: CMakeLists.txt  Configuration.cpp  Configuration.h  ConsoleLogger.cpp  ConsoleLogger.h  DatabaseLogger.cpp  DatabaseLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  Logger.cpp  Logger.h
src/wwwroot/ClydeBank-Coffee-Shop/: ai.html  chat.html  contact.html  events.html  index.html  login.html  registration.html  searchDatabase.html  searchLogFiles.html  try_again_registration.html  webSocketChat.html
src/wwwroot/ClydeBank-Coffee-Shop/css/: ai.css  ai2.css  ai23.css  registration.css  signin.css  style.css
src/wwwroot/ClydeBank-Coffee-Shop/javascripts/: app.js
tests/: CMakeLists.txt  DatabaseLoggerTest.cpp  DatabaseLoggerTest.h  FileLoggerTest.h  RedisCacheTest.h  RedisPubSubTest.h  TestSuite.cpp
